--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011-04-25</td>
-                        <td>$320,800</td>
+                        <td>ดารารัตน์ วงสา</td>
+                        <td>6439010064</td>
+                        <td>บีม</td>
+                        <td>0646317536</td>
+                        <td>Dararat Wongsa</td>
+                        <td>เล่นเกม</td>
                     </tr>
                     <tr>
                         <td>Garrett Winters</td>
