--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <div class="col-lg-12 col-md-6 col-sm-4 col-12 bg-info">
                 <h1 class="text-light">บีม</h1>
             </div>
-            <div class="col-lg-12 col-md-6 col-sm-4 col-12 bg-secondary">
+            <div class="col-lg-12 col-md-6 col-sm-4 col-12">
                 <h1 class="text-light">0646317536</h1>
             </div>
-            <div class="col-lg-12 col-md-6 col-sm-4 col-12 bg-success">
+            <div class="col-lg-12 col-md-6 col-sm-4 col-12">
                 <h1 class="text-light">Dararat Wongsa</h1>
             </div>
-            <div class="col-lg-12 col-md-6 col-sm-4 col-12 bg-danger">
+            <div class="col-lg-12 col-md-6 col-sm-4 col-12">
                 <h1 class="text-light">เล่นเกม</h1>
             </div>
         </div>
